--- a/css/style.css
+++ b/css/style.css
@@ -774,13 +774,14 @@ box-shadow: 0px 8px 7px 3px
     width: 170px;
     margin: 0 auto;
     text-align: center;
+    font-weight: 800;
 }
 .read_bt_1 a{
     width: 100%;
     float: left;
     font-size: 18px;
     color: #ffffff;
-    background-color: #f7c17b;
+    background-color: #e39837;
     padding: 8px 5px;
     text-align: center;
     margin-top: 80px;
