--- a/css/responsive.css
+++ b/css/responsive.css
@@ -2,6 +2,16 @@
 
 
 
+@media only screen and (max-width: 599px) {
+
+
+    .rating-row {
+        left: 5%
+    }
+
+}
+
+
 /*------------------------------------------------------------------- 767px x 599px ---------------------------------------------------------------------*/
 
 @media only screen and (min-width: 599px) and (max-width: 767px) {
